OS11SPRYKE-2033 pagination spacing fix (#2410)

--- a/src/Pyz/Yves/CatalogPage/Theme/default/components/organisms/product-list/product-list.scss
+++ b/src/Pyz/Yves/CatalogPage/Theme/default/components/organisms/product-list/product-list.scss
@@ -2,6 +2,7 @@
     #{$name} {
         margin: 0 rem(-15);
         max-width: none;
+        margin-bottom: rem(24);
 
         @content;
     }
